poc/virtual-service/virtual-service-counter-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: counter-service
spec:
  hosts:
  - counter-service
  http:
  - route:
    - destination:
        host: counter-service
