poc/virtual-service/virtual-service-details.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: counter-service
spec:
  hosts:
  - details
  http:
  - route:
    - destination:
        host: details

---

# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: counter-service-delegate
# spec:
#   hosts:
#     - details
#   http:
#     - rewrite:
#         authority: counter-service.cic-system.svc.cluster.local
#       route: 
#         - destination:
#             host: counter-service.cic-system.svc.cluster.local
