poc/virtual-service/virtual-service-product.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: counter-service
spec:
  hosts:
  - productpage
  http:
  - route:
    - destination:
        host: counter-service.cic-system.svc.cluster.local
        # subset: v1
  # - route:
  #   - destination:
  #       host: counter-service.cic-system.svc.cluster.local
        # subset: v2

# ---

# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: counter-service
# spec:
#   host: productpage
#   subsets:
#   - name: v1
#     labels:
#       app: productpage
#   - name: v2
#     labels:
#       app: productpage
