poc/virtual-service/virtual-service-ratings.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: counter-service
spec:
  hosts:
  - ratings
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: ratings
    - destination:
        host: counter-service.cic-system.svc.cluster.local
