poc/virtual-service/virtual-service-reviews.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: counter-service
spec:
  hosts:
  - reviews
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: reviews
    - destination:
        host: counter-service.cic-system.svc.cluster.local
